fixed navbar bug where indicator was in wrong position when on anything but projects

--- a/src/styles/components/Project.scss
+++ b/src/styles/components/Project.scss
@@ -29,8 +29,8 @@
         bottom: 20px;
         right: 20px;
         margin-top: 20px;
-        height: 120px;
-        opacity: 0.2;
+        height: 30px;
+        // opacity: 0.2;
         width: auto;
     }
 
@@ -63,5 +63,18 @@
         font-size: 12px;
         -webkit-transform: rotateX(-90deg) translateZ(-60px);
         transform: rotateX(-90deg)  translateZ(-60px);
+
+        div {
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            width: 55%;
+            padding: 10px 0;
+            border: 1px solid #fff;
+
+            p {
+                margin: 0;
+            }
+        }
     }
 }
